--- a/src/pages/HomePage/Components/Home__Header/Home__Header.css
+++ b/src/pages/HomePage/Components/Home__Header/Home__Header.css
@@ -136,13 +136,14 @@
   width: 344px;
 }
 
-.home__header .home-search button {
+.home__header .home-search a {
   padding: 7px 30px;
   border: none;
   border-radius: 10px;
   font-size: 30px;
   margin-top: 20px;
   cursor: pointer;
+  background-color: white;
 }
 
 .home__hero {
@@ -158,60 +159,8 @@
   line-height: normal;
 }
 
-.home__hero-inner {
-  display: flex;
-  flex-direction: column;
-}
 
-.home__hero-inner_in {
-  display: flex;
-  justify-content: space-between;
-}
 
-.inner-text {
-  display: flex;
-  align-items: center;
-}
-
-.inner-text-text {
-  margin-left: 20px;
-}
-
-.inner-text h6 {
-  color: var(--blue-backgrounds);
-  font-family: Raleway;
-  font-size: 45px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-
-}
-
-.inner-icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 120px;
-  height: 120px;
-  background-color: #D1DCE0;
-  text-align: center;
-  border-radius: 50%;
-  margin-top: 40px;
-}
-
-.inner-text p {
-  color: var(--Grey-darker, #5C7C8A);
-  font-family: Raleway;
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-
-.inner-icon svg {
-  width: 70px;
-  height: 70px;
-}
 
 @media(max-width: 1385px) {
   .home__header .home-search select {
@@ -456,233 +405,9 @@
 
 }
 
-.home__hero-inner-data-in {
-  display: flex;
-  flex-wrap: wrap;
-
-}
-
-.home__hero-p {
-  color: #000;
-  font-family: Raleway;
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  margin-top: 25px;
-  margin-top: 50px;
-}
-
-.home__hero-inner-data-in-img {
-  width: 30%;
-  margin: 20px;
-  border-radius: 20px;
-  color: black;
-  font-family: Raleway;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 128.688%;
-  background-color: #E2E3F8;
-}
 
 
-.home__hero-inner-data-in-img img {
-  width: 100%;
-  border-top-right-radius: 20px;
-  border-top-left-radius: 20px;
-}
 
-.home__hero-inner-data-in-img .link {
-  color: #000D7F;
-  font-family: Raleway;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 128.688%;
-}
-
-
-.home__hero-inner-data-in-text-in {
-  margin: 20px;
-  display: flex;
-  flex-direction: column;
-  margin-top: 20px;
-  font-size: 20px;
-  color: black;
-}
-
-.home__hero-inner-data-in-text {
-  padding: 20px;
-}
-
-.home__hero h5 {
-  color: black;
-  font-family: 'Raleway' sans-serif;
-  font-size: 26px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  margin-bottom: 10px;
-
-}
-
-.home__hero-inner-data-in-img p {
-  color: #000;
-  font-family: Raleway;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 133.687%;
-}
-
-.inner-span {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.home__hero-inner-data-in-text-in span {
-  margin: 5px;
-}
-
-.home__hero-inner-subjects-subjects {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.home__hero-inner-subjects-subjects img {
-  height: 100%;
-  width: 100%;
-  border-radius: 10px;
-  position: relative;
-  top: 0;
-
-
-}
-
-.home__hero-inner-subjects .subject-p {
-  color: #000;
-  font-family: Raleway;
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  margin-top: 50px;
-
-}
-
-.subject-images {
-  width: 30%;
-  height: 200px;
-  margin: 20px;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-}
-
-.subject-images p {
-  position: absolute;
-  color: #FFF;
-  font-family: Raleway;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-}
-
-.home__hero-inner-icons-comments-icons {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-}
-
-.home__hero-inner-icons-comments-icons {
-  cursor: pointer;
-}
-
-.home__hero-inner-comments-p {
-  color: #000;
-  font-family: Raleway;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  margin-top: 50px;
-}
-
-.home__hero-inner-icons-comments-icons .icons svg {
-  border-radius: 10px;
-  background: #D1DCE0;
-}
-
-.home__hero-inner-icons1 {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 100%;
-}
-
-.home__hero-inner-icons {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 100%;
-
-}
-
-.home__hero-inner-icons1 .icons {
-  padding: 30px;
-}
-
-.home__hero-inner-icons .icons {
-  padding: 30px;
-}
-
-
-.home__hero-inner-icons2 {
-  display: flex;
-  justify-content: flex-end;
-  flex-direction: row;
-  margin: 40px;
-  margin-right: 90px;
-}
-
-.home__hero-inner-icons2 .icons-straight1 {
-  margin-right: 80px;
-
-}
-
-.hero-inner-icons-icon-svg {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 10px;
-  background: #D1DCE0;
-  width: 180.133px;
-  height: 180px;
-  flex-shrink: 0;
-}
-
-.icons {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.icons p {
-  color: rgba(0, 0, 0, 0.75);
-  text-align: center;
-  font-family: Raleway;
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
 
 .home__hero-inner-carousel {
   display: flex;
@@ -709,209 +434,7 @@
   border-radius: 50%;
 }
 
-.home__hero-inner-footer .footer-p {
-  margin-bottom: 20px;
-  color: #000;
-  font-family: Raleway;
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  margin-left: 40px;
-}
 
-.home__hero-inner-footer p {
-  margin-bottom: 20px;
-  color: #000;
-  font-family: Raleway;
-  font-size: 25px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-}
-
-
-.home__hero-inner-phone {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 440px;
-  flex-direction: column;
-  background: #E2F1F8;
-}
-.home__hero-inner-phone-in{
-  display: flex;
-  flex-direction: column;
-}
-.home__hero-inner-phone-in input{
-  padding: 25px;
-  border-radius: 5px;
-  color: #000D7F;
-  border: #000D7F;
-  font-size: 20px;
-}
-
-.home__hero-inner-phone-in button {
-  border-radius: 5px;
-  background: #000D7F;
-  color: white;
-  padding: 25px;
-  border: none;
-  font-size: 20px;
-}
-
-
-
-
-
-.home__hero-inner-phone .home__hero-inner-phone-in  p{
-  font-size: 12px;
-  margin: 10px;
-}
-.phone-contact .check-box {
-  width: 25px;
-  height: 25px;
-  flex-shrink: 0;
-  border-radius: 5px;
-  background: var(--blue-backgrounds);
-}
-
-.home__hero-inner-phone .phone-contact {
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  margin: 20px;
-  width: 100%;
-}
-
-.home__hero-inner-information {
-  background: #000D7F;
-  overflow: hidden;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.home__hero-inner-information .infor {
-  width: 35%;
-}
-
-.home__hero-inner-information .infor div {
-  width: 60%;
-  margin: 40px;
-}
-
-.home__hero-inner-information .infor div p {
-  margin: 15px;
-}
-
-.home__hero-inner-information .main-p {
-  color: white;
-  font-size: 24px;
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  margin: 50px;
-}
-
-.home__hero-inner-information p {
-  color: white;
-  font-size: 24px;
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-}
-
-.home__hero-inner-information .informa {
-  display: flex;
-  flex-direction: column;
-  width: 30%;
-}
-
-
-.home__hero-inner-information .informa .informa-inner p {
-  color: #FFF;
-  font-family: Raleway;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 133.7%;
-  width: 92%;
-
-}
-
-.home__hero-inner-information .mainma-p {
-  color: white;
-  font-size: 24px;
-  font-family: 'Raleway';
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  margin: 50px;
-  margin-left: 0;
-}
-
-.information {
-  width: 30%;
-  margin-left: 40px;
-}
-
-
-
-.information .information-inner .information-inner-p p{
-  color: #FFF;
-  font-family: 'Raleway';
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 133.7%;
-}
-.information .information-inner .information-inner-button .email{
-  width: 100%;
-  padding: 25px;
-  background-color: transparent;
-  color: white;
-  border: 1.5px solid #FFF;
-  border-radius: 12px;
-  font-size: 20px;
-}
-.information .information-inner .information-inner-button .member{
-  width: 100%;
-  padding: 25px;
-  background-color: #E2F1F8;
-  color: black;
-  border: 1.5px solid #FFF;
-  border-radius: 12px;
-  font-size: 25px;
-  margin-top: 20px;
-}
-.information .information-inner .information-inner-global{
-  margin-top: 40px;
-}
-
-.information .information-inner .information-inner-global .global-icons {
-  display: flex;
-  justify-content: space-around;
-  margin-top: 60px;
-}
-.final{
-  display: flex;
-  justify-content: center;
-  background-color: #000D7F;
-}
-.final .reserved{
-  color: white;
-  color: #FFF;
-  font-family: 'Raleway';
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 133.7%;
-  margin-top: 50px;
-  margin-bottom: 10px;
-  margin-left: -100px;
-}
 @media(max-width: 418px){
   .home__hero-inner-footer .home__hero-inner-phone{
     display: none;
