--- a/src/pages/HomePage/Components/Home__Header/Home__Header.css
+++ b/src/pages/HomePage/Components/Home__Header/Home__Header.css
@@ -7,7 +7,12 @@
   box-sizing: border-box;
   font-family: 'Raleway', sans-serif;
 }
-
+.edu{
+  width: 12%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .home__header {
   position: relative;
   width: 100%;
@@ -167,7 +172,7 @@
     margin: 10px;
   }
 
-  .home__header .home-search button {
+  .home__header .home-search a {
     margin: 20px;
   }
 
@@ -287,9 +292,10 @@
 
   }
 
-  .home__header .home-search button {
+  .home__header .home-search a {
     width: 100%;
     height: 60px;
+    text-align: center;
   }
 
   .home__hero-inner_in {
