--- a/src/pages/HomePage/Components/Home__Hero-carousel/Home__Hero-carousel.css
+++ b/src/pages/HomePage/Components/Home__Hero-carousel/Home__Hero-carousel.css
@@ -20,12 +20,10 @@
     height: 505px;
     flex-shrink: 0;
     margin: 30px;
+    margin-bottom: 80px;
 }
 
-.card {
-    display: flex;
-    flex-direction: column;
-}
+
 
 .image-content-p {
     width: 100%;
