--- a/src/pages/Student/pages/Univer__single/Univer__single.css
+++ b/src/pages/Student/pages/Univer__single/Univer__single.css
@@ -1,52 +1,63 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
+.umumiy{
+    width: 100%;
+    height: 100vh;
 }
-.univer_name{
-    width: 578px;
-    height: 31px;
-    top:30px;
-    left: 319px;
-    size: 26px;
-    line-height: 30,52px;
+.univername{
+   margin-top: 15px;
+   margin-right: 20px;
+   font-weight: 600;
 }
 .univer__single{
-    width: 1091px;
-    height: 428px;
-    border-radius: 14px;
-    top: 132px;
-    left: 319px;
-    color:#FFFFFF;
+    width: auto;
+    height: 400px;
+    margin-top: 50px;
+    margin-left: 170px;
+    margin-right: 170px;
     display: flex;  
     justify-content: center;
     align-items: center;
+    border-radius: 14px;
+    background: #FFF;
+    box-shadow: 2px 4px 9px 0px rgba(0, 0, 0, 0.10), 0px -2px 8px 0px rgba(0, 0, 0, 0.09);
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+}
+.univer_img{
+    top: 165px;
+    left: 754px;
+    background-color: black;
+    margin-bottom:15px;
 }
 .zayaf_text1{
-    width: 643px;
-    height: 62px;
     top: 415px;
     left: 543px;
-    size: 26px;
-    line-height: 30.52px;
+    size: 28px;
     text-align: center;
     color: #000000;
+    font-weight: 900;
+    margin-bottom: 15px;
+    text-align: center;
 }
 .zayaf_text2{
-    width: 643px;
-    height: 26px;
-    top: 491px;
-    left: 552px;
     size: 22px;
-    line-height: 25.83px;
     color: #000000;
+    font-weight: 600; 
+    margin-bottom: 15px;
+    text-align: center;
 }
-.span_text{
-    width: 643px;
-    height: 26px;
-    top: 491px;
-    left: 552px;
+.zayaf_text3{
     size: 22px;
-    line-height: 25.83px;
     color: #000D7F;
+    font-weight: 6600;
+    text-align: center;
+    text-decoration: none;
+}
+@media screen and (max-width:648px) {
+    .univer__single{
+        margin-left: 20px !important;
+        margin-right: 20px !important;
+
+    }
 }
