--- a/src/pages/Student/pages/Menedjer__page/Menedjer__page.css
+++ b/src/pages/Student/pages/Menedjer__page/Menedjer__page.css
@@ -2,6 +2,32 @@
     width: 100%;
     height: auto;
 }
+.manadger__page-in{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 0px;
+}
+.manadger__page-in .img2{
+    height: 45px;
+    width: 45px;
+    border-radius: 120px;
+    flex-shrink: 0;
+    margin-right: 5px;
+}
+.manadger__page-in .manadger__inner{
+    width: 250px;
+    display: flex;
+    align-items: center;
+    color: #000;
+    font-family: Raleway;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
 .pmenedjer{
     color: #000;
     font-family: Raleway;
@@ -10,6 +36,15 @@
     font-weight: 700;
     line-height: normal;
     margin-bottom: 30px;
+    margin-left: 20px;
+}
+.nargiza{
+    color: #000;
+    font-family: Raleway;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
 .Menedjer__page2{
     width: 80%;
@@ -21,12 +56,14 @@
     box-shadow: 2px 4px 9px 0px rgba(0, 0, 0, 0.10), 0px -2px 8px 0px rgba(0, 0, 0, 0.09);
     
 }
+
 .nimadir{
     display: flex;
     align-items: center;
     padding-left: 20px;
     padding-top: 30px;
 }
+
 .img{
     height: 100px;
     width: 100px;
@@ -76,7 +113,6 @@
 }
 .ism{
     color: #000;
-    
     font-weight: 600;
    
 }
@@ -120,10 +156,10 @@
     font-size: 15px;
    }
    .number{
-    font-size: 14px;
+    font-size: 13px;
    }
    .email{
-    font-size: 14px;
+    font-size: 13px;
    }
    .nameabout .m_name{
     font-size: 13px;
