--- a/src/pages/Student/pages/Univer__single/Univer__single.css
+++ b/src/pages/Student/pages/Univer__single/Univer__single.css
@@ -6,7 +6,41 @@
 .univername{
    margin-top: 15px;
    margin-right: 20px;
-   font-weight: 600;
+   color: #000;
+   font-family: Raleway;
+   font-size: 26px;
+   font-style: normal;
+   font-weight: 700;
+   line-height: normal;
+   margin-left: 10px;
+
+}
+
+.univernameimg{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 0px;
+}
+.univernameimg .u_img{
+    height: 45px;
+    width: 45px;
+    border-radius: 120px;
+    flex-shrink: 0;
+    margin-right: 5px;
+}
+.univernameimg .univer_nameimg{
+    width: 250px;
+    display: flex;
+    align-items: center;
+    color: #000;
+    font-family: Raleway;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
 .univer__single{
     width: auto;
@@ -59,5 +93,8 @@
         margin-left: 20px !important;
         margin-right: 20px !important;
 
+    }
+    .univernameimg .univername {
+        font-size: 15px;
     }
 }
