--- a/src/pages/HomePage/Components/Home__Hero-carousel/Home__Hero-carousel.css
+++ b/src/pages/HomePage/Components/Home__Hero-carousel/Home__Hero-carousel.css
@@ -16,7 +16,7 @@
     background: #E2F1F8;
     padding: 20px;
     width: 100%;
-    height: 565px;
+    height: 515px;
     flex-shrink: 0;
     margin-bottom: 80px;
     margin-top: 40px;
@@ -72,7 +72,7 @@
     height: auto ;
 }
 .image-content-p{
-    margin-top: 0;
+    margin-top: 15px;
 }
 .image-content-p p {
     margin: 10px;
@@ -80,7 +80,7 @@
     width: 100%;
 }
 
-.image-content-text {
+.image-content .image-content-text {
     margin-top: 20px;
 }
 
@@ -102,7 +102,6 @@
     line-height: normal;
     display: flex;
     margin-left: 10px;
-
 }
 
 .card-image{
@@ -178,4 +177,6 @@
     background-color: black;
 }
 
-
+::-webkit-scrollbar{
+    width: 0;
+}
