--- a/src/pages/HomePage/Components/Home__Hero-data/Home__Hero-data.css
+++ b/src/pages/HomePage/Components/Home__Hero-data/Home__Hero-data.css
@@ -45,7 +45,9 @@
     margin-top: 10px;
     margin-left: -10px;
 }
-
+.home__hero-inner-data-in .home__hero-inner-data-in-img .data-icon i{
+    color:  white;
+}
 .home__hero-inner-data-in-img .link {
     color: #000D7F;
     font-family: Raleway;
