--- a/src/pages/HomePage/Components/Home__Hero-inner-footer/Home__Hero-inner-footer.css
+++ b/src/pages/HomePage/Components/Home__Hero-inner-footer/Home__Hero-inner-footer.css
@@ -37,9 +37,13 @@
 .home__hero-inner-phone-in input {
     padding: 25px;
     border-radius: 5px;
-    color: #000D7F;
     border: #000D7F;
+    color: #000D7F;
+    font-family: Raleway;
     font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 
 .home__hero-inner-phone-in button {
@@ -61,11 +65,11 @@
 }
 
 .phone-contact .check-box {
-    width: 25px;
+    width: 20px;
     height: 20px;
     flex-shrink: 0;
     border-radius: 5px;
-    background: var(--blue-backgrounds);
+    background: #D1DCE0;
 }
 
 .home__hero-inner-phone .phone-contact {
@@ -201,7 +205,7 @@
     color: white;
     color: #FFF;
     font-family: 'Raleway';
-    font-size: 24px;
+    font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: 133.7%;
