--- a/src/pages/LoginPage/Login.css
+++ b/src/pages/LoginPage/Login.css
@@ -32,23 +32,24 @@
 .login_text{
    margin-right: 550px;
    margin-top: 10px;
-   
    }
-   .login_inp{
-      
+   .login_inp{  
       width: 600px;
       height: 64px;
       border-radius: 16px;
       background: #FFF;
       border-radius: 10px;
+      padding: 10px;
+      font-size: 20px;
    }
  .password_inp{
-  
    width: 600px;
    height: 64px;
    border-radius: 16px;
    background: #FFF;
    border-radius: 10px;
+   padding: 10px;
+   font-size: 20px;
  }
  label{
    display: flex;
@@ -56,7 +57,6 @@
    margin-top: 10px;
  }
 .btn{
-   
     display: flex;
     justify-content: center;
     text-align: center;
@@ -67,11 +67,8 @@
     height: 64px;
     margin-top: 20px;
     color: #FFF;
-
     font-size: 20px;
-
     font-weight: 500;
-  
     line-height: 64px;
     border: none;
 }
