--- a/src/view/Footer/Footer.scss
+++ b/src/view/Footer/Footer.scss
@@ -18,4 +18,32 @@
             }
         }
     }
+
+}
+@media screen  and (max-width:590px ){
+    .UmumiyFotter{
+        position: relative;
+        bottom: -1px;
+        width: 100%;
+        background-color: white;
+        padding: 10px 0;
+        display: flex;
+        flex-direction: column !important;
+        justify-content: center;
+        align-items: center;
+        .wrapper{
+            display: flex;
+            flex-direction: column;
+            align-self: center;
+            a{
+                margin-left: 0 !important;
+                margin: 10px;
+                &:first-child{
+                    margin-left: 0;
+                }
+            }
+        }
+    
+    }
+    
 }
