--- a/src/view/Footer/Footer.scss
+++ b/src/view/Footer/Footer.scss
@@ -2,7 +2,7 @@
     position: relative;
     bottom: -1px;
     width: 100%;
-    background-color: white;
+    background-color: #000D7F;
     padding: 10px 0;
     display: flex;
     justify-content: center;
@@ -12,7 +12,9 @@
         flex-direction: row;
         justify-content: space-between;
         a{
+            color: white;
             margin-left: 20px;
+            text-decoration: none;
             &:first-child{
                 margin-left: 0;
             }
@@ -25,7 +27,7 @@
         position: relative;
         bottom: -1px;
         width: 100%;
-        background-color: white;
+        background-color: #000D7F;
         padding: 10px 0;
         display: flex;
         flex-direction: column !important;
