--- a/src/pages/Student/pages/Student_home/Student_home.css
+++ b/src/pages/Student/pages/Student_home/Student_home.css
@@ -1,3 +1,156 @@
-.hi {
-    color: aqua;
+.student_page {
+    width: 100%;
+    height: 100%;
+}
+
+.student-page-header {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.student_page-inner .inner-img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    object-fit: cover;
+}
+
+.student_page-inner {
+    height: 345px;
+    position: relative;
+}
+
+.student-home-icon {
+    width: 7%;
+    margin: 20px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.student-main-p {
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 26px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-left: 30px;
+}
+
+.student-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.student-header img {
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+}
+
+.student-header p {
+    color: #FFF;
+    font-family: Raleway;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-top: 10px;
+}
+
+.student-page-hero-in {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 25px;
+    height: 70px;
+}
+
+.student-page-hero-in a {
+    text-decoration: none;
+    color: #000D7F;
+    font-family: Raleway;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.32px;
+}
+
+.student-page-hero-in h3 {
+    color: #000;
+    font-family: Raleway;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+.student-page-hero {
+    margin: 30px;
+    border-radius: 14px;
+    background: #FFF;
+    box-shadow: 2px 4px 9px 0px rgba(0, 0, 0, 0.10), 0px -2px 8px 0px rgba(0, 0, 0, 0.09);
+    margin-bottom: 220px;
+}
+
+.student-data-in {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 77px;
+    flex-shrink: 0;
+}
+
+.data-in-inner {
+    width: 80%;
+}
+
+.data-in-inner p {
+    color: #00121A;
+    font-family: Raleway;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 0.4px;
+}
+
+.student-data-in h3 {
+    color: #00121A;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.44px;
+    margin-left: 30px;
+}
+
+.student-data-in2 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 77px;
+    flex-shrink: 0;
+    background: #F0FAFF;
+}
+
+.student-data-in2 h3 {
+    color: #00121A;
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.44px;
+    margin-left: 30px;
 }
