--- a/src/pages/HomePage/Components/Home__Hero-data/Home__Hero-data.css
+++ b/src/pages/HomePage/Components/Home__Hero-data/Home__Hero-data.css
@@ -48,6 +48,9 @@
 .home__hero-inner-data-in .home__hero-inner-data-in-img .data-icon i{
     color:  white;
 }
+.home__hero-inner-data-in .home__hero-inner-data-in-img .data-icon i:active{
+    color: yellow;
+}
 .home__hero-inner-data-in-img .link {
     color: #000D7F;
     font-family: Raleway;
