--- a/src/pages/Student/pages/Student_home/Student_home.css
+++ b/src/pages/Student/pages/Student_home/Student_home.css
@@ -154,3 +154,73 @@
     letter-spacing: 0.44px;
     margin-left: 30px;
 }
+@media(max-width:700px){
+    .student_page{
+        margin-right: 10px;
+    }
+    .student-page-header{
+        margin-left: 60px;
+        width: 83%;
+        }
+        .student-header{
+            margin-left: 60px;
+            width: 83%;
+            flex-direction: row;
+        }
+        .student-header img{
+            width: 70px;
+            height: 70px;
+        }
+        .student_page-inner{
+            height: 200px;
+        }
+        .student-header p{
+            font-size: 14px;
+            margin: 20px;
+        }
+    .student-main-p {
+        font-size: 15px;
+    }
+    .student-page-hero{
+        margin: 0;
+    }
+
+    .student-page-hero-in{
+        margin: 0;
+        margin-left: 23px;
+    }
+    .student-page-hero-in h3{
+        font-size: 20px;
+    }
+    .student-data-in{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-left: 20px;
+        margin-top: 20px;
+    }
+    .student-data-in2{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-left: 20px;
+        margin-top: 20px;
+    }
+    .student-data-in p{
+        font-size: 15px;
+    }
+    .student-data-in2 p{
+        font-size: 15px;
+    }
+    .student-data-in h3{
+        width: 100%;
+        margin: 0;
+        display: flex;
+        justify-content: center;
+    }
+    .data-in-inner{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
